infra/manifests/radio-web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radio-web
  namespace: radio-web
spec:
  selector:
    app: radio-web
  ports:
    - port: 3004
      targetPort: 3004
      protocol: TCP
