infra/manifests/radio-web/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radio-web
  namespace: radio-web
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway
      namespace: istio-system
  hostnames:
    - "radio.brandwhisper.cloud"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: radio-web
          port: 3004
          weight: 1
